# computer_simulator

25.2/: CMakeLists.txt
25.2/include/: cpu.h  disk.h  gpu.h  keyboard.h  ram.h
25.2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  keyboard.cpp  main.cpp  ram.cpp
